# reddit-yt-tts

./: .gitignore  .gitmodules  Pipfile  assets  client_secrets.json  debug.py  delmeoauth2.json  demo-div-png-2-video.ipynb  demo-reddit selection-.ipynb  demo-selenium-scroll-n-screenshot.ipynb  demo-store-asset-credits.ipynb  demo-tesseract.ipynb  demo-tts.ipynb  demo-youtube-upload.ipynb  demo-yt-thumbnail-text.ipynb  hello.py  image_utils.py  make_thumbnail.py  notes.txt  oauth2.json  oauth2.json.bak  proxy_chrome_browser.py  pyproject.toml  run-tts-2-vid.py  tts-job-opt.py  tts_job_opt.py  upload_youtube.py
.ipynb_checkpoints/: demo-tts-checkpoint.ipynb
